--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- Bootstrap icon link -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- Bootstrap css cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bg-white">
     <nav class="navbar navbar-expand-lg bg-danger">
-        <div class="container-fluid">
+        <div class="container">
 
-          <a class="navbar-brand text-white" href="#">Jillur Rahman</a>
+          <a class="navbar-brand text-white fs-4" href="#">Jillur Rahman</a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -58,6 +64,153 @@
           </div>
         </div>
       </nav>
+      <header>
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="./img/./New folder/slider-01.jpg" class="d-block w-100" alt="jillur and bulbuli rahman">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="./img/./New folder/slider-02.jpg" class="d-block w-100" alt="bulbuli rahman">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="./img/./New folder/slider-03.jpg" class="d-block w-100" alt="dgm atrai zonal office">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="./img/./New folder/slider-04.jpg" class="d-block w-100" alt="jillur rahman">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      </header>
+      <section class="slider-section my-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-5">
+              <img src="./img/./New folder/karina-apa.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-7">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card border-0">
+                    <img src="./img/./New folder/shoe.jpg" class="card-img-top me-2" alt="...">
+                    <div class="card-body">
+                      <p class="card-text text-secondary">product sneakers & keds</p>
+                      <div class="d-flex justify-content-between">
+                        <span class="text-primary">$154.00</span>
+                        <span class="text-warning">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-half"></i>
+                          <i class="bi bi-star"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card border-0">
+                    <img src="./img/./New folder/jeans.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text text-secondary">jeans pant</p>
+                      <div class="d-flex justify-content-between">
+                        <span class="text-primary">$154.00</span>
+                        <span class="text-warning">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-half"></i>
+                          <i class="bi bi-star"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card border-0">
+                    <img src="./img/./New folder/watch.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text text-secondary">watch</p>
+                      <div class="d-flex justify-content-between">
+                        <span class="text-primary">$154.00</span>
+                        <span class="text-warning">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-half"></i>
+                          <i class="bi bi-star"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card border-0">
+                    <img src="./img/./New folder/t-shirt.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text text-secondary">watch</p>
+                      <div class="d-flex justify-content-between">
+                        <span class="text-primary">$154.00</span>
+                        <span class="text-warning">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-half"></i>
+                          <i class="bi bi-star"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card border-0">
+                    <img src="./img/./New folder/half-pent.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text text-secondary">watch</p>
+                      <div class="d-flex justify-content-between">
+                        <span class="text-primary">$154.00</span>
+                        <span class="text-warning">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-half"></i>
+                          <i class="bi bi-star"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card border-0">
+                    <img src="./img/./New folder/cap.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text text-secondary">watch</p>
+                      <div class="d-flex justify-content-between">
+                        <span class="text-primary">$154.00</span>
+                        <span class="text-warning">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-half"></i>
+                          <i class="bi bi-star"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 </body>
