--- a/index.html
+++ b/index.html
@@ -211,6 +211,255 @@
           </div>
         </div>
       </section>
+      <section class="product-section">
+        <div class="container">
+          <div class="row">
+            <h3 class="text-center">trining product</h3>
+            <div class="col-md-3 shadow py-3">
+              <div class="d-flex justify-content-between">
+                <span class="bg-danger px-3 text-white rounded">sale</span>
+                <span class="text-danger"><i class="bi bi-code"></i> compare</span>
+              </div>
+              <img src="./img/./New folder/headphone.jpg" class="img-fluid" alt="">
+              <span class="text-secondary">headphone</span>
+              <p class="h6">wreless bluetooth headphones</p>
+              <div class="d-flex justify-content-between">
+                <span class="text-primary">$158.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+              </div>
+              <button type="button" class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> add to card</button>
+              <a href="#" class="btn btn-outline-secondary w-100">Quick viwe</a>
+            </div>
+            <div class="col-md-3 shadow py-3">
+              <div class="d-flex justify-content-between">
+                <span class="bg-danger px-3 text-white rounded">sale</span>
+                <span class="text-danger"><i class="bi bi-code"></i> compare</span>
+              </div>
+              <img src="./img/./New folder/freeze.jpg" class="img-fluid" alt="">
+              <span class="text-secondary">headphone</span>
+              <p class="h6">wreless bluetooth headphones</p>
+              <div class="d-flex justify-content-between">
+                <span class="text-primary">$158.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+              </div>
+              <button type="button" class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> add to card</button>
+              <a href="#" class="btn btn-outline-secondary w-100">Quick viwe</a>
+            </div>
+            <div class="col-md-3 shadow py-3">
+              <div class="d-flex justify-content-between">
+                <span class="bg-danger px-3 text-white rounded">sale</span>
+                <span class="text-danger"><i class="bi bi-code"></i> compare</span>
+              </div>
+              <img src="./img/./New folder/lgtv.jpg" class="img-fluid" alt="">
+              <span class="text-secondary">headphone</span>
+              <p class="h6">wreless bluetooth headphones</p>
+              <div class="d-flex justify-content-between">
+                <span class="text-primary">$158.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+              </div>
+              <button type="button" class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> add to card</button>
+              <a href="#" class="btn btn-outline-secondary w-100">Quick viwe</a>
+            </div>
+            <div class="col-md-3 shadow py-3">
+              <div class="d-flex justify-content-between">
+                <span class="bg-danger px-3 text-white rounded">sale</span>
+                <span class="text-danger"><i class="bi bi-code"></i> compare</span>
+              </div>
+              <img src="./img/./New folder/mp3box.jpg" class="img-fluid" alt="">
+              <span class="text-secondary">headphone</span>
+              <p class="h6">wreless bluetooth headphones</p>
+              <div class="d-flex justify-content-between">
+                <span class="text-primary">$158.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+              </div>
+              <button type="button" class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> add to card</button>
+              <a href="#" class="btn btn-outline-secondary w-100">Quick viwe</a>
+            </div>
+            <div class="col-md-3 shadow py-3 mt-5">
+              <div class="d-flex justify-content-between">
+                <span class="bg-danger px-3 text-white rounded">sale</span>
+                <span class="text-danger"><i class="bi bi-code"></i> compare</span>
+              </div>
+              <img src="./img/./New folder/trandwatch-2.jpg" class="img-fluid" alt="">
+              <span class="text-secondary">headphone</span>
+              <p class="h6">wreless bluetooth headphones</p>
+              <div class="d-flex justify-content-between">
+                <span class="text-primary">$158.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+              </div>
+              <button type="button" class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> add to card</button>
+              <a href="#" class="btn btn-outline-secondary w-100">Quick viwe</a>
+            </div>
+            <div class="col-md-3 shadow py-3 mt-5">
+              <div class="d-flex justify-content-between">
+                <span class="bg-danger px-3 text-white rounded">sale</span>
+                <span class="text-danger"><i class="bi bi-code"></i> compare</span>
+              </div>
+              <img src="./img/./New folder/smartphone.jpg" class="img-fluid" alt="">
+              <span class="text-secondary">headphone</span>
+              <p class="h6">wreless bluetooth headphones</p>
+              <div class="d-flex justify-content-between">
+                <span class="text-primary">$158.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+              </div>
+              <button type="button" class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> add to card</button>
+              <a href="#" class="btn btn-outline-secondary w-100">Quick viwe</a>
+            </div>
+            <div class="col-md-3 shadow py-3 mt-5">
+              <div class="d-flex justify-content-between">
+                <span class="bg-danger px-3 text-white rounded">sale</span>
+                <span class="text-danger"><i class="bi bi-code"></i> compare</span>
+              </div>
+              <img src="./img/./New folder/laptop.jpg" class="img-fluid" alt="">
+              <span class="text-secondary">headphone</span>
+              <p class="h6">wreless bluetooth headphones</p>
+              <div class="d-flex justify-content-between">
+                <span class="text-primary">$158.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+              </div>
+              <button type="button" class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> add to card</button>
+              <a href="#" class="btn btn-outline-secondary w-100">Quick viwe</a>
+            </div>
+            <div class="col-md-3 shadow py-3 mt-5">
+              <div class="d-flex justify-content-between">
+                <span class="bg-danger px-3 text-white rounded">sale</span>
+                <span class="text-danger"><i class="bi bi-code"></i> compare</span>
+              </div>
+              <img src="./img/./New folder/trandwatch-2.jpg" class="img-fluid" alt="">
+              <span class="text-secondary">headphone</span>
+              <p class="h6">wreless bluetooth headphones</p>
+              <div class="d-flex justify-content-between">
+                <span class="text-primary">$158.00</span>
+                <span class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star"></i>
+                </span>
+              </div>
+              <button type="button" class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> add to card</button>
+              <a href="#" class="btn btn-outline-secondary w-100">Quick viwe</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="accordion-section py-5">
+        <div class="container">
+          <div class="row">
+            <p class="h4 text-center">know me more</p>
+            <div class="col-md-7 mt-5 me-auto">
+              <div class="accordion">
+                <div class="accordion-item">
+                  <div class="accordion-heading">
+                    <button type="button" class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapse1">Our sarvic #1</button>
+                  </div>
+                  <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="">
+                    <div class="accordion-body">
+                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis a ipsam consequatur corporis cumque voluptatum impedit odit eius, blanditiis ipsa eos reprehenderit quas excepturi repellendus possimus aspernatur aliquid dignissimos ad!</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion">
+                <div class="accordion-item">
+                  <div class="accordion-heading">
+                    <button type="button" class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapse2">Our sarvic #2</button>
+                  </div>
+                  <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="">
+                    <div class="accordion-body">
+                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis a ipsam consequatur corporis cumque voluptatum impedit odit eius, blanditiis ipsa eos reprehenderit quas excepturi repellendus possimus aspernatur aliquid dignissimos ad!</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion">
+                <div class="accordion-item">
+                  <div class="accordion-heading">
+                    <button type="button" class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapse3">Our sarvic #3</button>
+                  </div>
+                  <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="">
+                    <div class="accordion-body">
+                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis a ipsam consequatur corporis cumque voluptatum impedit odit eius, blanditiis ipsa eos reprehenderit quas excepturi repellendus possimus aspernatur aliquid dignissimos ad!</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+              <button class="btn btn-outline-danger w-100 mt-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                know more details
+              </button>
+              
+              <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasExampleLabel">More menu</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                  <div>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate ea eligendi quam, nostrum quos amet soluta quidem eum similique nihil dignissimos repellendus perferendis veritatis placeat voluptates maxime numquam ducimus eaque.
+                  </div>
+                  <div class="dropdown mt-3">
+                    <button class="btn btn-danger dropdown-toggle w-100" type="button" data-bs-toggle="dropdown">
+                      Dropdown button
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Home</a></li>
+                      <li><a class="dropdown-item" href="#">Product</a></li>
+                      <li><a class="dropdown-item" href="#">Shop</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mt-3">
+              <img src="./img/./New folder/know-me-more.jpg" class="img-fluid" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 </body>
