shop brand section

--- a/index.html
+++ b/index.html
@@ -460,6 +460,52 @@
           </div>
         </div>
       </section>
+      <section class="img-section py-5">
+        <div class="container">
+          <div class="row">
+            <h4 class="mb-5">shop by brand</h4>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-1.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-2.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-3.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-4.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-5.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-6.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-7.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-8.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-9.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-10.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-11.png" alt="">
+            </div>
+            <div class="col-md-2 border border-1 py-5 text-center">
+              <img src="./img/./New folder/shopbybrand-12.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 </body>
