--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="./img/./New folder/slider-01.jpg" class="d-block w-100" alt="jillur and bulbuli rahman">
+                <img src="./img/./New folder/bulbuli-banner.jpg" class="d-block w-100" alt="jillur and bulbuli rahman">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./img/./New folder/slider-02.jpg" class="d-block w-100" alt="bulbuli rahman">
@@ -500,6 +500,95 @@
             <div class="col-md-2 border border-1 py-5 text-center">
               <img src="./img/./New folder/shopbybrand-12.png" alt="">
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="top-sels-product mt-5">
+        <div class="container">
+          <div class="row justify-content-between">
+            <h4 class="mb-5">top seling products</h4>
+
+            <div class="col-lg-5 d-flex align-items-center justify-content-around bg-white px-5 py-5">
+              <div class="col-lg-5">
+                <img src="./img/./New folder/topSelling-1.jpg" alt="">
+              </div>
+              <div class="col-lg-5">
+                <p class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </p>
+                <p class="text-success">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p>
+                  <span class="fw-bold me-3 text-secondary"><s>$125.00</s></span>
+                  <span class="fw-bold text-danger">110.00</span>
+                </p>
+                <button type="button" class="btn btn-danger">Add to cat</button>
+              </div>
+            </div>
+            <div class="col-lg-5 d-flex align-items-center justify-content-around bg-white px-5 py-5">
+              <div class="col-lg-5">
+                <img src="./img/./New folder/topSelling-2.jpg" alt="">
+              </div>
+              <div class="col-lg-5">
+                <p class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </p>
+                <p class="text-success">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p>
+                  <span class="fw-bold me-3 text-secondary"><s>$125.00</s></span>
+                  <span class="fw-bold text-danger">110.00</span>
+                </p>
+                <button type="button" class="btn btn-danger">Add to cat</button>
+              </div>
+            </div>
+            <div class="col-lg-5 d-flex align-items-center justify-content-around bg-white px-5 py-5 mt-5">
+              <div class="col-lg-5">
+                <img src="./img/./New folder/toSelling-3.jpg" alt="">
+              </div>
+              <div class="col-lg-5">
+                <p class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </p>
+                <p class="text-success">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p>
+                  <span class="fw-bold me-3 text-secondary"><s>$125.00</s></span>
+                  <span class="fw-bold text-danger">110.00</span>
+                </p>
+                <button type="button" class="btn btn-danger">Add to cat</button>
+              </div>
+            </div>
+            <div class="col-lg-5 d-flex align-items-center justify-content-around bg-white px-5 py-5 mt-5">
+              <div class="col-lg-5">
+                <img src="./img/./New folder/topSelling-4.jpg" alt="">
+              </div>
+              <div class="col-lg-5">
+                <p class="text-warning">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </p>
+                <p class="text-success">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p>
+                  <span class="fw-bold me-3 text-secondary"><s>$125.00</s></span>
+                  <span class="fw-bold text-danger">110.00</span>
+                </p>
+                <button type="button" class="btn btn-danger">Add to cat</button>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
