--- a/index.html
+++ b/index.html
@@ -592,6 +592,30 @@
           </div>
         </div>
       </section>
+      <section class="link py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <a href="https://web.facebook.com/jillur.rahman.9699?_rdc=1&_rdr#">
+                <div style="background-image: url(img/headphoneSlide.png); height: 300px; background-repeat: no-repeat; background-size: cover; background-position: center;">
+
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <a href="https:/www.facebook.com">
+                <div style="background: url(img/headphoneSlide.png) no-repeat center; height: 300px;background-size: cover;"></div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
