--- a/index.html
+++ b/index.html
@@ -605,21 +605,66 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <a href="https:/www.facebook.com">
-                <div style="background: url(img/headphoneSlide.png) no-repeat center; height: 300px;background-size: cover;"></div>
-              </a>
+     <section class="container my-5">
+      <p class="h4 text-center">Order Your Products</p>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="d-flex justify-content-between">
+            <div class="col-md-5">
+              <label for="formane" class="form-label">Name</label>
+              <input type="text" id="formane" class="form-control" placeholder="Write Your Full Name">
+            </div>
+            <div class="col-md-5">
+              <label for="foremail" class="form-label">Email Address</label>
+              <input type="email" id="foremail" class="form-control" placeholder="Write Your E-mail">
             </div>
           </div>
+          <div class="mt-3">
+            <label for="forshipping" class="form-label">Shipping address</label>
+            <input type="text" id="forshipping" class="form-control" placeholder="Street Address">
+
+            <input type="text" class="form-control mt-3" placeholder="Street Address Line 2">
+          </div>
+          <div class="d-flex justify-content-between mt-3">
+            <div col-md-5>
+              <input type="text" class="form-control" placeholder="City">
+            </div>
+            <div class="col-md-5">
+              <input type="text" class="form-control" placeholder="Regoin">
+            </div>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <div class="col-md-5">
+              <input type="text" class="form-control" placeholder="Postal / Zip Code">
+            </div>
+            <div class="col-md-5">
+              <select class="form-select" aria-label="small">
+                <option selected>Your Country</option>
+                <option value="1">bangladesh</option>
+                <option value="2">india</option>
+                <option value="3">japan</option>
+                <option value="4">china</option>
+              </select>
+            </div>
+          </div>
+          <div class="mt-3">
+            <label for="forwrite" class="form-label">Write any message</label>
+            <textarea class="form-control" id="" cols="" rows="2"></textarea>
+          </div>
+          <div class="mt-4">
+            <a href="#" class="btn btn-danger w-100">Press Confirm</a>
+          </div>
         </div>
-      </section>
+      <div class="col-md-6">
+        <img src="./img/./New folder/contact.jpg" class="img-fluid" alt="">
+      </div>
+      </div>
+     </section>
+      
 
 
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-</body>
+ </body>
 </html>
