--- a/index.html
+++ b/index.html
@@ -609,57 +609,119 @@
       <p class="h4 text-center">Order Your Products</p>
       <div class="row">
         <div class="col-md-6">
-          <div class="d-flex justify-content-between">
-            <div class="col-md-5">
-              <label for="formane" class="form-label">Name</label>
-              <input type="text" id="formane" class="form-control" placeholder="Write Your Full Name">
+          <form action="#">
+            <div class="d-flex justify-content-between">
+              <div class="col-md-5">
+                <label for="formane" class="form-label">Name</label>
+                <input type="text" id="formane" class="form-control" placeholder="Write Your Full Name">
+              </div>
+              <div class="col-md-5">
+                <label for="foremail" class="form-label">Email Address</label>
+                <input type="email" id="foremail" class="form-control" placeholder="Write Your E-mail">
+              </div>
             </div>
-            <div class="col-md-5">
-              <label for="foremail" class="form-label">Email Address</label>
-              <input type="email" id="foremail" class="form-control" placeholder="Write Your E-mail">
+            <div class="mt-3">
+              <label for="forshipping" class="form-label">Shipping address</label>
+              <input type="text" id="forshipping" class="form-control" placeholder="Street Address">
+  
+              <input type="text" class="form-control mt-3" placeholder="Street Address Line 2">
             </div>
-          </div>
-          <div class="mt-3">
-            <label for="forshipping" class="form-label">Shipping address</label>
-            <input type="text" id="forshipping" class="form-control" placeholder="Street Address">
-
-            <input type="text" class="form-control mt-3" placeholder="Street Address Line 2">
-          </div>
-          <div class="d-flex justify-content-between mt-3">
-            <div col-md-5>
-              <input type="text" class="form-control" placeholder="City">
+            <div class="d-flex justify-content-between mt-3">
+              <div col-md-5>
+                <input type="text" class="form-control" placeholder="City">
+              </div>
+              <div class="col-md-5">
+                <input type="text" class="form-control" placeholder="Regoin">
+              </div>
             </div>
-            <div class="col-md-5">
-              <input type="text" class="form-control" placeholder="Regoin">
+            <div class="mt-3 d-flex justify-content-between">
+              <div class="col-md-5">
+                <input type="text" class="form-control" placeholder="Postal / Zip Code">
+              </div>
+              <div class="col-md-5">
+                <select class="form-select" aria-label="small">
+                  <option selected>Your Country</option>
+                  <option value="1">bangladesh</option>
+                  <option value="2">india</option>
+                  <option value="3">japan</option>
+                  <option value="4">china</option>
+                </select>
+              </div>
             </div>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <div class="col-md-5">
-              <input type="text" class="form-control" placeholder="Postal / Zip Code">
+            <div class="mt-3">
+              <label for="forwrite" class="form-label">Write any message</label>
+              <textarea class="form-control" id="" cols="" rows="2"></textarea>
             </div>
-            <div class="col-md-5">
-              <select class="form-select" aria-label="small">
-                <option selected>Your Country</option>
-                <option value="1">bangladesh</option>
-                <option value="2">india</option>
-                <option value="3">japan</option>
-                <option value="4">china</option>
-              </select>
+            <div class="mt-4">
+              <a href="#" class="btn btn-danger w-100">Press Confirm</a>
             </div>
-          </div>
-          <div class="mt-3">
-            <label for="forwrite" class="form-label">Write any message</label>
-            <textarea class="form-control" id="" cols="" rows="2"></textarea>
-          </div>
-          <div class="mt-4">
-            <a href="#" class="btn btn-danger w-100">Press Confirm</a>
-          </div>
+          </form>
         </div>
       <div class="col-md-6">
         <img src="./img/./New folder/contact.jpg" class="img-fluid" alt="">
       </div>
       </div>
      </section>
+     <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="footer-title">
+              <h2 class="text-center text-warning">BT ShoP</h2>
+            </div>
+            <hr class="border border-1 border-danger">
+          </div>
+          <div class="col-md-3">
+            <div class="about">
+              <h5>About Us</h5>
+              <p>We know there are a lot of threa developers our but we pride into a firm in the industry.</p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="Feature">
+              <h5>Feature</h5>
+              <p>
+                <a href="#" class="text-decoration-none">About Us</a>
+              </p>
+              <p>
+                <a href="#" class="text-decoration-none">Best Products</a>
+              </p>
+              <p><a href="#" class="text-decoration-none">Terms & Condition</a></p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="General">
+              <h5>General Links</h5>
+              <p>
+                <a href="#" class="text-decoration-none">Blog</a>
+              </p>
+              <p>
+                <a href="#" class="text-decoration-none">Tracking Orders</a>
+              </p>
+              <p><a href="#" class="text-decoration-none">Become Seller</a>
+              </p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="Helpful">
+              <h5>Helpful</h5>
+              <p>
+                <a href="#" class="text-decoration-none">Flash Sale</a>
+              </p>
+              <p>
+                <a href="#" class="text-decoration-none">FAQ</a>
+              </p>
+              <p><a href="#" class="text-decoration-none">Support</a>
+              </p>
+            </div>
+          </div>
+          <hr class="border border-1 border-danger">
+          <div class="text-center mb-5 text-danger">
+            &copy: by jillur rahman || 2025
+          </div>
+        </div>
+      </div>
+     </footer>
       
 
 
